app/styles/local.css
/* ... */
div[doi-publisher] > div {
  padding-right: 0px;
}

/* HAMBURGER - looks good, but doesn't work.  */

.navbar-toggler-icon {
  display: inline-block;
  width: 1.5em;
  height: 1.5em;
  vertical-align: middle;
  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%2833, 37, 41, 0.75%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
  background-repeat: no-repeat;
  background-position: center;
  background-size: 100%;
}

/* DOI FORMS - UPLOAD */

.has-error .form-control,
.has-error .es-control,
.is-invalid.text-area.form-control
{
  color: #e74c3c;
  border-color: #e74c3c;
}

.form-group input.is-valid + div.form-text {
    color: #2ecc71;
}

/* VALIDATION - text areas (Mostly in doi form upload.) */

.form-group.has-feedback textarea.form-control
{
  color: #2ecc71;
  border-color: #2ecc71;
}

.form-group.has-error textarea.form-control
{
  color: #e74c3c;
  border-color: #e74c3c;
}

/* Fixes email service contract field (repositories/new) */
.form-group .has-error .help-block
{
  color: #e74c3c;
}

/* Landing page */

.icon-landing {
  display: flex;
  padding-bottom: 0.5em;
}
/* Footer Color for accessibility */

.footer {
  color: #243B54;
}

.footer a, .footer a:hover, .footer a:visited {
  color: #243B54;
}

.footer .color-description {
  font-size: 18px;
  color: #243B54;
}

